--- a/RepoZ.App.Win/packages.config
+++ b/RepoZ.App.Win/packages.config
@@ -1,16 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AsyncIO" version="0.1.26.0" targetFramework="net461" />
-  <package id="FluentWPF" version="0.6.1" targetFramework="net461" />
+  <package id="AsyncIO" version="0.1.69" targetFramework="net461" />
+  <package id="ControlzEx" version="3.0.2.4" targetFramework="net461" />
+  <package id="FluentWPF" version="0.7.0" targetFramework="net461" />
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net461" />
-  <package id="LibGit2Sharp" version="0.25.4" targetFramework="net461" />
-  <package id="LibGit2Sharp.NativeBinaries" version="1.0.252" targetFramework="net461" />
-  <package id="MahApps.Metro" version="1.5.0" targetFramework="net461" />
-  <package id="MaterialDesignColors" version="1.1.3" targetFramework="net461" />
-  <package id="MaterialDesignThemes" version="2.3.0.823" targetFramework="net461" />
-  <package id="MaterialDesignThemes.MahApps" version="0.0.10" targetFramework="net461" />
-  <package id="NetMQ" version="4.0.0.1" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
-  <package id="protobuf-net" version="2.1.0" targetFramework="net461" />
+  <package id="LibGit2Sharp" version="0.26.1" targetFramework="net461" />
+  <package id="LibGit2Sharp.NativeBinaries" version="2.0.289" targetFramework="net461" />
+  <package id="MahApps.Metro" version="1.6.5" targetFramework="net461" />
+  <package id="MaterialDesignColors" version="1.2.0" targetFramework="net461" />
+  <package id="MaterialDesignThemes" version="2.6.0" targetFramework="net461" />
+  <package id="MaterialDesignThemes.MahApps" version="0.1.0" targetFramework="net461" />
+  <package id="NetMQ" version="4.0.0.207" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
+  <package id="protobuf-net" version="2.4.0" targetFramework="net461" />
   <package id="TinyIoC" version="1.3" targetFramework="net461" developmentDependency="true" />
 </packages>
