--- a/Specs/packages.config
+++ b/Specs/packages.config
@@ -1,14 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AsyncIO" version="0.1.26.0" targetFramework="net461" />
-  <package id="Castle.Core" version="4.3.1" targetFramework="net461" />
-  <package id="FluentAssertions" version="4.19.3" targetFramework="net461" />
-  <package id="LibGit2Sharp" version="0.25.4" targetFramework="net461" />
-  <package id="LibGit2Sharp.NativeBinaries" version="1.0.252" targetFramework="net461" />
-  <package id="Moq" version="4.10.1" targetFramework="net461" />
-  <package id="NetMQ" version="4.0.0.1" targetFramework="net461" />
-  <package id="NUnit" version="3.7.1" targetFramework="net461" />
-  <package id="NUnit3TestAdapter" version="3.8.0" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net461" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net461" />
+  <package id="AsyncIO" version="0.1.69" targetFramework="net461" />
+  <package id="Castle.Core" version="4.4.0" targetFramework="net461" />
+  <package id="FluentAssertions" version="5.8.0" targetFramework="net461" />
+  <package id="LibGit2Sharp" version="0.26.1" targetFramework="net461" />
+  <package id="LibGit2Sharp.NativeBinaries" version="2.0.289" targetFramework="net461" />
+  <package id="Moq" version="4.12.0" targetFramework="net461" />
+  <package id="NetMQ" version="4.0.0.207" targetFramework="net461" />
+  <package id="NUnit" version="3.12.0" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.15.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
